# TPCMapping

./: .gitignore  .gitmodules  02-network-manager-all.yaml  README.md  package.xml
FLIR_camera/spinnaker_camera_driver/launch/: camera.launch
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/flir_camera_description/: .catkin  local_setup.sh  setup.sh
devel/.private/flir_camera_driver/: .catkin  local_setup.sh
devel/.private/flir_ptu_description/: .catkin  .rosinstall  local_setup.sh
devel/.private/flir_ptu_driver/: .catkin  local_setup.sh
devel/.private/flir_ptu_viz/: .catkin  .rosinstall  setup.sh
devel/.private/image_exposure_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/joint_state_publisher/: .catkin  .rosinstall
devel/.private/joint_state_publisher_gui/: .catkin
devel/.private/ptu_control/: .catkin  .rosinstall  local_setup.sh
include/ptu_control/: PTUControl.hpp
launch/: camera.launch  pan_tilt.launch  ptu_control.launch
logs/flir_ptu_driver/: build.cmake.000.log.stderr
logs/flir_ptu_viz/: build.cmake.000.log.stderr
logs/spinnaker_camera_driver/: build.make.000.log.stderr
ptu_control/: package.xml
ptu_control/launch/: ptu_control.launch
ptu_control/src/: PTUControl.cpp  pan_tilt_client.cpp  ptu_control_node.cpp
rqt/: PositionControls.perspective  config.rviz  ptu.perspective
src/: PTUControl.cpp  pan_tilt_client.cpp
src/SLAM/rcomponent/: setup.py
src/SLAM/robotnik_elevator_interface/robotnik_elevator_interface_msgs/: CMakeLists.txt
src/SLAM/robotnik_elevator_interface/robotnik_elevator_interface_msgs/srv/: GoToFloor.srv
src/SLAM/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_description/: CMakeLists.txt  package.xml
src/SLAM/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_description/launch/: spawn_elevator.launch
src/SLAM/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_description/urdf/: elevator.xacro
src/SLAM/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_node/: CMakeLists.txt
src/SLAM/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_node/msg/: doorleftmsg.msg
src/SLAM/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_node/srv/: SetDoor.srv
src/SLAM/robotnik_gazebo_plugins/robotnik_gazebo_ground_truth_odom/: README.md  package.xml
src/SLAM/robotnik_pad/robotnik_pad_msgs/: CMakeLists.txt  package.xml
src/SLAM/robotnik_pad/robotnik_pad_plugins/: CMakeLists.txt  package.xml
src/SLAM/robotnik_pad/robotnik_pad_plugins/include/robotnik_pad_plugins/: elevator_plugin.h
src/SLAM/summit/rcomponent/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
src/SLAM/summit/rcomponent/include/rcomponent/: rcomponent.h  topic_health_monitor.h
src/SLAM/summit/rcomponent/scripts/: node_creator_cpp  node_creator_py
src/SLAM/summit/rcomponent/src/: rcomponent.cpp  simple_component.cpp  simple_component_async.cpp  simple_diagnostics_component.cpp  simple_service_component.cpp
src/SLAM/summit/rcomponent/src/rcomponent/: rcomponent.py  state_machine.py
src/SLAM/summit/rcomponent/templates/: CHANGELOG.rst  CMakeLists_cpp.txt  README.md  package_cpp.xml  package_py.xml  rc_node_cpp.launch  rc_node_py.launch  rc_subnode.h  rc_subnode_node.cpp
src/SLAM/summit/robotnik_elevator_interface/elevator_controller_modbus/: CMakeLists.txt  package.xml
src/SLAM/summit/robotnik_elevator_interface/elevator_controller_modbus/launch/: ave_maria.launch
src/SLAM/summit/robotnik_elevator_interface/elevator_controller_modbus/src/: elevator_controller_interface_node.cpp
src/SLAM/summit/robotnik_elevator_interface/robotnik_elevator_component/: CMakeLists.txt  README.md  package.xml
src/SLAM/summit/robotnik_elevator_interface/robotnik_elevator_component/launch/: ave_maria.launch  test_component.launch
src/SLAM/summit/robotnik_elevator_interface/robotnik_elevator_interface/: package.xml
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_force_based_move/: CMakeLists.txt  package.xml
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_force_based_move/include/robotnik_force_based_move/: robotnik_force_based_move.h
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_control/: CMakeLists.txt  package.xml
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_control/config/: elevator_control.yaml
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_control/launch/: elevator_control.launch
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_elevator/elevator_gazebo/: CMakeLists.txt  package.xml
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_elevator/robotnik_gazebo_elevator/: CMakeLists.txt  package.xml
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_ground_truth_odom/: CMakeLists.txt
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_ground_truth_odom/include/robotnik_gazebo_ground_truth_odom/: robotnik_gazebo_ground_truth_odom.h
src/SLAM/summit/robotnik_gazebo_plugins/robotnik_gazebo_ground_truth_odom/src/: robotnik_gazebo_ground_truth_odom.cpp
src/SLAM/summit/robotnik_pad/robotnik_pad/: CMakeLists.txt  package.xml
src/SLAM/summit/robotnik_pad/robotnik_pad/config/: robotnik_pad_plugins_ackermann_ps4.yaml  robotnik_pad_plugins_ps4.yaml  robotnik_pad_plugins_ps4_kinova_arm_gen3.yaml  robotnik_pad_plugins_xbox360.yaml
src/SLAM/summit/robotnik_pad/robotnik_pad/launch/: robotnik_pad_virtual.launch
src/SLAM/summit/robotnik_pad/robotnik_pad/src/: robotnik_pad_node.cpp
src/SLAM/summit/teleop_panel/: CMakeLists.txt  package.xml
src/SLAM/summit/teleop_panel/deb/: ros-kinetic-teleop-panel_0.10.3-0xenial_amd64.deb  ros-melodic-teleop-panel_0.10.4-0bionic_amd64.deb
src/flir_ptu_ethernet/: CMakeLists.txt  package.xml
src/flir_ptu_ethernet/src/flir_ptu_ethernet/: flir_ptu_ethernet.py  flir_ptu_ethernet_node.py
src/ptu_control/: CMakeLists.txt  package.xml
src/thermal_mapping/: CMakeLists.txt  package.xml
(+421 files in other folders)
