<?xml version="1.0"?>
<package format="2">
  <name>flir_ptu_ethernet</name>
  <version>0.2.0</version>
  <description>The flir_ptu_ethernet package, based on RComponent structure. Package for controlling the FLIR PTU using ROS.</description>

  <maintainer email="jgomez@robotnik.es">José Gómez</maintainer>

  <author email="jgomez@robotnik.es">José Gómez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <export>

  </export>
</package>
