<?xml version="1.0"?>
<package format="2">
  <name>robotnik_pad_msgs</name>
  <version>0.10.0</version>
  <description>The robotnik_pad_msgs package</description>

  <maintainer email="rjulia@robotnik.es">Raquel Juliá</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro</maintainer>
  <maintainer email="jgomez@robotnik.es">José Gómez</maintainer>
  <maintainer email="ggari@robotnik.es">Guillem Gari</maintainer>

  <author email="dredo@robotnik.es">David Redó</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
