<?xml version="1.0"?>
<package format="2">
  <name>robotnik_pad_plugins</name>
  <version>0.10.0</version>
  <description>The robotnik_pad_plugins package intends to standarize the pad component amongst all the robots</description>

  <maintainer email="rnavarro@robotnik.es">Roman Navarro</maintainer>
  <maintainer email="jgomez@robotnik.es">José Gómez</maintainer>
  <maintainer email="ggari@robotnik.es">Guillem Gari</maintainer>
  <maintainer email="rjulia@robotnik.es">Raquel Juliá</maintainer>

  <author email="dredo@robotnik.es">David Redó</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>robotnik_pad</build_depend>
  <build_depend>robotnik_pad_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>robotnik_pad</exec_depend>
  <exec_depend>robotnik_pad_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <robotnik_pad plugin="${prefix}/robotnik_pad_pluginlib.xml"/>
  </export>
</package>
