<package>
  <name>robotnik_force_based_move</name>
  <version>0.5.1</version>
  <description>robotnik_force_based_move provides gazebo plugin to move a mobile-robot using a force based approach</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotnik_force_based_move</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="mbosch@robotnik.es">Marc Bosch-Jorge</author>
  <maintainer email="mbosch@robotnik.es">Marc Bosch-Jorge</maintainer>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
