<?xml version="1.0"?>
<package format="2">
  <name>robotnik_pad</name>
  <version>0.11.0</version>
  <description>The robotnik_pad package intends to standarize the pad component amongst all the robots</description>

  <maintainer email="rjulia@robotnik.es">Raquel Juliá</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro</maintainer>
  <maintainer email="jgomez@robotnik.es">José Gómez</maintainer>
  <maintainer email="ggari@robotnik.es">Guillem Gari</maintainer>


  <author email="dredo@robotnik.es">David Redó</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>rcomponent</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>joy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
