<package>
  <name>elevator_gazebo</name>
  <version>0.0.0</version>
  <description>elevator_gazebo</description>
  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>elevator_control</run_depend>
  <run_depend>elevator_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
